Set up link for viewing a file directly.

--- a/static/index.html
+++ b/static/index.html
@@ -18,6 +18,7 @@
 		</div>
 		<div id="subfileselector" class="filelist">
 			<h1>Select a subfile from <span id="tlfilename"></span></h1>
+			<a id="viewsubfile">View this file</a>
 			<ul id="subfiles">
 			</ul>
 		</div>
