--- a/static/index.html
+++ b/static/index.html
@@ -8,6 +8,7 @@
 		<script src="pako.js"></script>
 		<script src="binary.js"></script>
 		<script src="s3d.js"></script>
+		<script src="hexview.js"></script>
 		<script src="main.js"></script>
 	</head>
 	<body>
