Made structgen emit javascript.  Built initial mod 'viewer'.

--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,9 @@
 		<script src="//cdnjs.cloudflare.com/ajax/libs/three.js/r83/three.min.js"></script>
 		<script src="pako.js"></script>
 		<script src="binary.js"></script>
+		<script src="generated/eqgstructs.js"></script>
 		<script src="s3d.js"></script>
+		<script src="modview.js"></script>
 		<script src="hexview.js"></script>
 		<script src="main.js"></script>
 	</head>
