--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<script src="//code.jquery.com/jquery-2.2.4.min.js"></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/three.js/r83/three.min.js"></script>
+		<script src="common.js"></script>
 		<script src="pako.js"></script>
 		<script src="binary.js"></script>
 		<script src="generated/eqgstructs.js"></script>
