Added .ter view.

--- a/static/index.html
+++ b/static/index.html
@@ -11,6 +11,7 @@
 		<script src="generated/eqgstructs.js"></script>
 		<script src="s3d.js"></script>
 		<script src="modview.js"></script>
+		<script src="terview.js"></script>
 		<script src="hexview.js"></script>
 		<script src="main.js"></script>
 	</head>
