Added almost-correct zon support.

--- a/static/index.html
+++ b/static/index.html
@@ -14,6 +14,7 @@
 		<script src="s3d.js"></script>
 		<script src="aniview.js"></script>
 		<script src="modview.js"></script>
+		<script src="zonview.js"></script>
 		<script src="hexview.js"></script>
 		<script src="main.js"></script>
 	</head>
