--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
 		<title>EQView</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<script src="//code.jquery.com/jquery-2.2.4.min.js"></script>
-		<script src="//cdnjs.cloudflare.com/ajax/libs/three.js/r83/three.js"></script>
+		<script src="three.js"></script>
 		<script src="FirstPersonControls.js"></script>
 		<script src="DDSLoader.js"></script>
 		<script src="common.js"></script>
